--- a/parkingApp/app.json
+++ b/parkingApp/app.json
@@ -27,7 +27,12 @@
       "favicon": "./assets/images/favicon.png"
     },
     "plugins": [
-      "expo-router"
+      "expo-router",
+      ["expo-camera",
+      {
+        "cameraPermission": "Allow Can I Park Here? to access your camera."
+      }]
+      
     ],
     "experiments": {
       "typedRoutes": true
