--- a/parkingApp/package.json
+++ b/parkingApp/package.json
@@ -17,10 +17,14 @@
   "dependencies": {
     "@expo/vector-icons": "^14.0.2",
     "@react-navigation/native": "^6.0.2",
-    "expo": "~51.0.26",
+    "expo": "^51.0.27",
+    "expo-camera": "~15.0.14",
+    "expo-cli": "^6.3.10",
     "expo-constants": "~16.0.2",
     "expo-font": "~12.0.9",
+    "expo-image-manipulator": "~12.0.5",
     "expo-linking": "~6.3.1",
+    "expo-media-library": "~16.0.4",
     "expo-router": "~3.5.21",
     "expo-splash-screen": "~0.27.5",
     "expo-status-bar": "~1.12.1",
@@ -33,12 +37,14 @@
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
+    "react-native-vision-camera": "^4.5.1",
     "react-native-web": "~0.19.10"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@types/jest": "^29.5.12",
     "@types/react": "~18.2.45",
+    "@types/react-native": "^0.73.0",
     "@types/react-test-renderer": "^18.0.7",
     "jest": "^29.2.1",
     "jest-expo": "~51.0.3",
