--- a/parkingApp/tsconfig.json
+++ b/parkingApp/tsconfig.json
@@ -13,5 +13,8 @@
     "**/*.tsx",
     ".expo/types/**/*.ts",
     "expo-env.d.ts"
+, "app/(tabs)/index.tsx"  ],
+  "exclude": [
+    "parkingApp/app/index.tsx"
   ]
 }
