--- a/parkingApp/package.json
+++ b/parkingApp/package.json
@@ -17,10 +17,12 @@
   "dependencies": {
     "@expo/vector-icons": "^14.0.2",
     "@react-navigation/native": "^6.0.2",
+    "axios": "^1.7.4",
     "expo": "^51.0.27",
     "expo-camera": "~15.0.14",
     "expo-cli": "^6.3.10",
     "expo-constants": "~16.0.2",
+    "expo-file-system": "^17.0.1",
     "expo-font": "~12.0.9",
     "expo-image-manipulator": "~12.0.5",
     "expo-linking": "~6.3.1",
